# cpp-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitset_test.cpp  bitset_test.h  build.sh  class_test.cpp  class_test.h  clock_test.cpp  clock_test.h  cons_des.cpp  cons_des.h  continue_test.h  entry.h  filestream_test.cpp  inheritance_test.cpp  inheritance_test.h  main.cpp  operator_test.cpp  operator_test.h  return_list_test.h  return_pointer_to_array_test.h  sizeof_test.h  smart_ptr_test.cpp  string_test.h  template_test.cpp  template_test.h  test_accumulate.cpp  test_char.c  test_class.cpp  test_common.h  test_empty_base.cpp  test_enable_if.cpp  test_inheritance.cpp  test_initialization.cpp  test_map.cpp  test_noexcept.cpp  test_observer.cpp  test_ptr_to_const.cpp  (+12 more)
clib/: CMakeLists.txt  lib.cpp  lib.h  test_clib.c
old-tests/: bitset_test.h  cons_des.cpp  continue_test.h  filestream_test.h  main.cpp  operator_test.h  predicate_test.cpp  predicate_test.h  sizeof_test.h  smart_ptr_test.cpp  template_test.cpp
second-batch/: CMakeLists.txt  testbooststring.cpp  testlambda.cpp  teststdmap.cpp
